# I.R.a.C-transbot_farming-robot

./: .gitmore  README.md  Testing_video  yolo_depth.py
CSI-Camera/: simple_camera.py
CSI-Camera/src/om_moveit_examples/src/: testing_effort.py
CSI-Camera/src/open_manipulator/open_manipulator_control_gui/: CMakeLists.txt
CSI-Camera/src/open_manipulator/open_manipulator_teleop/: CMakeLists.txt
CSI-Camera/src/open_manipulator/open_manipulator_teleop/include/open_manipulator_teleop/: open_manipulator_teleop_keyboard.h
CSI-Camera/src/open_manipulator/open_manipulator_teleop/src/: open_manipulator_teleop_keyboard.cpp
CSI-Camera/src/open_manipulator_applications/: README.md
CSI-Camera/src/open_manipulator_applications/open_manipulator_applications/: package.xml
CSI-Camera/src/open_manipulator_applications/open_manipulator_master_slave/: CMakeLists.txt  package.xml
CSI-Camera/src/open_manipulator_msgs/: CMakeLists.txt
CSI-Camera/src/open_manipulator_p/open_manipulator_p_description/: CMakeLists.txt
CSI-Camera/src/open_manipulator_p/open_manipulator_p_teleop/: CMakeLists.txt
CSI-Camera/src/open_manipulator_p/open_manipulator_p_teleop/src/: open_manipulator_p_teleop_keyboard.cpp
CSI-Camera/src/open_manipulator_p_applications/open_manipulator_p_master_slave/: CMakeLists.txt
CSI-Camera/src/open_manipulator_perceptions/: README.md
CSI-Camera/src/transbot_astra/launch/: DepthSrv.launch  KCFTracker.launch
CSI-Camera/src/transbot_nav/launch/: transbot_bringup.launch
CSI-Camera/src/transbot_nav/rviz/: transbot_map.rviz
CSI-Camera/src/yolov5/: detect.py
CSI-Camera/src/yolov5/utils/: datasets.py
DeepStream-Yolo/docs/: YOLOv8.md
Transbot/transbot/: file_transbot.py
software/laser_app/: laser_app.launch
software/laser_app/data/: xgo.db
software/laser_app/devel/: .catkin  setup.sh
software/laser_app/src/laserscan_to_point_publish/: CMakeLists.txt  package.xml
software/laser_app/src/yahboom_app_save_map/: CMakeLists.txt
software/laser_app/src/yahboom_web_savemap_interfaces/: CMakeLists.txt
software/transbot_library/devel/: .catkin  .rosinstall
software/transbot_library/src/transbot_config_astra/: CMakeLists.txt
software/transbot_library/src/transbot_description/: CMakeLists.txt  package.xml
software/world_canvas/devel/: .catkin  local_setup.sh
transbot_ws/: .install_ros_melodic.sh.swp  build_log.txt  build_log.txtx  install_ros_melodic.sh  rasp.py
transbot_ws/devel/include/astra_camera/: AstraConfig.h
transbot_ws/devel/lib/astra_camera/: astra_camera_node  list_devices_node
transbot_ws/devel/lib/beginner_tutorials/: listener  talker
transbot_ws/devel/lib/ddynamic_reconfigure/: fake_dynamic_reconfigure_server  test_bool_dynamic_reconfigure_server
transbot_ws/devel/lib/dynamixel_sdk_examples/: bulk_read_write_node  indirect_address_node  read_write_node  sync_read_write_node
transbot_ws/devel/lib/dynamixel_workbench_controllers/: dynamixel_workbench_controllers  find_dynamixel
transbot_ws/devel/lib/dynamixel_workbench_operators/: joint_operator  wheel_operator
transbot_ws/devel/lib/open_manipulator_control_gui/: open_manipulator_control_gui
transbot_ws/devel/lib/open_manipulator_controller/: open_manipulator_controller
transbot_ws/devel/lib/open_manipulator_gazebo/: omx_gripper_sub_publisher
transbot_ws/devel/lib/open_manipulator_hw/: omx_control_node
transbot_ws/devel/lib/open_manipulator_p_master_slave/: open_manipulator_p_master_slave
transbot_ws/devel/lib/open_manipulator_pick_and_place/: open_manipulator_pick_and_place
transbot_ws/devel/lib/open_manipulator_teleop/: open_manipulator_teleop_joystick  open_manipulator_teleop_keyboard
transbot_ws/devel/lib/pkgconfig/: astra_camera.pc  astra_launch.pc  beginner_tutorials.pc  cv_bridge.pc  ddynamic_reconfigure.pc  dynamixel_sdk.pc  dynamixel_sdk_examples.pc  dynamixel_workbench_controllers.pc  dynamixel_workbench_msgs.pc  dynamixel_workbench_operators.pc  dynamixel_workbench_toolbox.pc  image_geometry.pc  manipulator_position_controller.pc  om_moveit_examples.pc  open_manipulator_ar_markers.pc  open_manipulator_camera.pc  open_manipulator_control_gui.pc  open_manipulator_controller.pc  open_manipulator_controllers.pc  open_manipulator_description.pc  open_manipulator_gazebo.pc  open_manipulator_hw.pc  open_manipulator_libs.pc  open_manipulator_moveit_config.pc  open_manipulator_msgs.pc  open_manipulator_p_master_slave.pc  open_manipulator_pick_and_place.pc  open_manipulator_teleop.pc  opencv_tests.pc  realsense2_camera.pc  realsense2_description.pc  roboticsgroup_gazebo_plugins.pc  robotis_manipulator.pc  transbot_astra.pc  yolo_v5.pc  yolov5_ros.pc
transbot_ws/devel/lib/transbot_astra/: KCFTracker_node
transbot_ws/devel/lib/transbot_bringup/: base_node
transbot_ws/devel/lib/transbot_nav/: rrt_save_map  save
transbot_ws/devel/lib/transbot_visual/: astra_depth_image  (+3 more)
transbot_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
transbot_ws/src/manipulator_position_controller/: CMakeLists.txt  README.txt  install_and_build.sh
transbot_ws/src/open_manipulator/open_manipulator/: package.xml
transbot_ws/src/open_manipulator/open_manipulator_control_gui/: package.xml
transbot_ws/src/open_manipulator/open_manipulator_controller/: package.xml
transbot_ws/src/open_manipulator/open_manipulator_description/: package.xml
transbot_ws/src/open_manipulator/open_manipulator_description/urdf/: open_manipulator.transmission.xacro  open_manipulator.urdf.xacro
transbot_ws/src/open_manipulator/open_manipulator_libs/: package.xml
transbot_ws/src/open_manipulator/open_manipulator_libs/src/: dynamixel.cpp  kinematics.cpp  open_manipulator.cpp
transbot_ws/src/transbot_astra/: CMakeLists.txt
transbot_ws/src/transbot_laser/: CMakeLists.txt
transbot_ws/src/transbot_visual/: package.xml
transbot_ws/src/vision_opencv/: .travis.sh
transbot_ws/src/vision_opencv/cv_bridge/: package.xml
transbot_ws/src/vision_opencv/opencv_tests/: package.xml
transbot_ws/src/vision_opencv/vision_opencv/: package.xml
transbot_ws/src/yolov5_ros/: CMakeLists.txt  package.xml
(+328 files in other folders)
