<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator</name>
  <version>2.0.2</version>
  <description>
    ROS-enabled OpenManipulator is a full open robot platform consisting of OpenSoftware​, OpenHardware and OpenCR(Embedded board)​.
    The OpenManipulator is allowed users to control it more easily by linking with the MoveIt! package. Moreover it has full hardware compatibility with TurtleBot3​. 
    Even if you do not have a real robot, you can control the robot in the Gazebo simulator​.
  </description>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>open_manipulator_control_gui</exec_depend>
  <exec_depend>open_manipulator_controller</exec_depend>
  <exec_depend>open_manipulator_description</exec_depend>
  <exec_depend>open_manipulator_libs</exec_depend>
  <exec_depend>open_manipulator_teleop</exec_depend>
  <export><metapackage/></export>
</package>
