<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_controller</name>
  <version>2.0.2</version>
  <description>OpenManipulator controller package</description>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>open_manipulator_msgs</depend>
  <depend>robotis_manipulator</depend>
  <depend>open_manipulator_libs</depend>
  <depend>cmake_modules</depend>
  <depend>boost</depend>
</package>
