<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_description</name>
  <version>2.0.2</version>
  <description>
    OpenManipulator 3D model description for visualization and simulation 
  </description>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
</package>
