<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_libs</name>
  <version>2.0.2</version>
  <description>
    OpenManipulator library (Kinematics lib., Dynamixel lib., Drawing path lib.)
  </description>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>robotis_manipulator</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>eigen</depend>
  <depend>robotis_manipulator</depend>
  <depend>roscpp</depend>
</package>
