<package format="2">
  <name>cv_bridge</name>
  <version>1.12.8</version>
  <description>
    This contains CvBridge, which converts between ROS
    Image messages and OpenCV images.
  </description>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend version_gte="3.3.0">opencv3</build_depend>
  <build_depend>python</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend version_gte="3.3.0">opencv3</exec_depend>
  <exec_depend>python</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <test_depend>rostest</test_depend>
  <test_depend>python-numpy</test_depend>

  <doc_depend>dvipng</doc_depend>
</package>
