<package>
  <name>opencv_tests</name>
  <version>1.12.8</version>
  <description>
    Tests the enumerants of the ROS Image message, and functionally tests the Python and C++ implementations of CvBridge.
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>cv_bridge</run_depend>
</package>
