<package>
  <name>vision_opencv</name>
  <version>1.12.8</version>
  <description>Packages for interfacing ROS with OpenCV, a library of programming functions for real time computer vision.</description>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <export>
    <metapackage/>
  </export>

</package>
